--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
-*.class
+# .gitignore template obtained from: https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore
 
-# Package Files #
-*.jar
-*.war
-*.ear
+.project
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin 
+.target
+
+# TeXlipse plugin
+.texlipse
